feat(bot): add caching, metrics, and admin controls
Introduce Caffeine caches with metrics, admin eviction commands, cache-aware search/detail flows, and unit tests; update Taskmaster plan for bot ops/tests.